--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,157 +1,4 @@
 
-/* HEADER */
-
-header{
-    background-color: #ecdce1;
+body{
+    overflow-x: hidden;
 }
-
-.hearder_borderTop {
-    background: linear-gradient(180deg, rgb(255 255 255) 0%, rgb(255 255 255 / 0%) 100%);
-    border-top: 8px solid #e13868;
-    min-height: 200px;
-    z-index: 1;
-}
-
-.hearder_texts {
-    width: auto;
-    height: 38px;
-    text-align: left;
-    color: #1A2C3A;
-    font-weight: bold;
-    font-size: 16px;
-    margin-left: 23px;
-}
-
-.clickHeaderIcon{
-    cursor: pointer;
-}
-
-.navbar-light .navbar-nav .nav-link {
-    color: rgb(0 0 0) !important;
-}
-
-.navbar-light .navbar-nav .nav-link :hover{
-    /* color: rgb(0 0 0 / 12%) !important; */
-}
-
-
-.clickHeaderIcon:hover{
-    opacity: 0.8;
-    -webkit-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-
-/* Body */
-
-.mainPage{
-    background-color: #ecdce1;
-}
-
-.mainBG_game{
-    background: url(../img/body/main_bg.png);
-    width: 80%;
-    height: 100%;
-    position: absolute;
-    top: -40%;
-    left: -2%;
-    z-index: 78;
-    transform: scale(1.5);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    z-index: 0;
-}
-
-.mainPageIMG{
-    width: 100%;
-    user-select: none;
-}
-
-.sectionH1{
-    float: right;
-}
-
-.sectionH1 p{
-    float: right;
-    text-align: left;
-    font-weight: bold;
-    color: #1A2C3A;
-    width: 100%;
-    font-size: 80px;
-    margin-top: 60px;
-    line-height: 65px;
-    font-family: darkergrotesque;
-    user-select: none;
-    text-shadow: 4px 3px 3px rgb(181 13 13 / 66%), 6px 4px 0px #ffffff;
-}
-
-.sectionH1 p:after{
-    content: "";
-    display: block;
-    height: 3px;
-    width: 110px;
-    border-radius: 20px;
-    top: 41px;
-    border-bottom: 18px solid #f57f7f;
-    position: relative;
-}
-
-.sectionH1 p:after{
-    content: "";
-    text-shadow: 6px 3px 3px rgb(255 255 255 / 40%);
-
-}
-
-.mainPageTitle{
-    font-family: "DarkerGrotesque-Black, Darker Grotesque";
-}
-
-.mainPage_JamCity{
-    float: right;
-}
-
-.mainPage_JamCity p{
-    float: right;
-    text-align: left;
-    color: #383838;
-    width: 100%;
-    font-size: 20px;
-    margin-top: 60px;
-    line-height: 35px;
-    user-select: none;
-    margin-left: 73px;
-}
-
-.mainPageClick{
-    position: relative;
-    float: right;
-    width: 100%;
-    height: auto;
-}
-
-.learnMore{
-    float: right;
-    width: 200px;
-    height: 60px;
-    margin-top: 30px;
-    margin-right: 360px;
-    background-color: #ff006f;
-    font-size: 22px;
-    color: gainsboro;
-    border-radius: 19px;
-    border: none;
-    cursor: pointer;
-    font-family: darkergrotesque;
-}
-
-.learnMore>button {
-    transition: all .5s ease-in-out;
-}
-
-.learnMore>button:hover {
-    background-color: white;
-}
-
