--- a/assets/css/featuredGames.css
+++ b/assets/css/featuredGames.css
@@ -77,3 +77,41 @@
     cursor: pointer;
     font-family: darkergrotesque;
 }
+
+@media only screen and (max-width: 1366px) {
+    .paddingCard {
+        padding: 32px 98px;
+    }
+    .featuredGames_title p {
+        font-size: 96px;
+    }
+
+    .featuredGamesSub_title p {
+        font-weight: bold;
+        color: #1A2C3A;
+        font-size: 50px;
+        padding: 10px 120px;
+    }
+
+    .gameTitle {
+        font-size: 65px;
+        top: calc(81%);
+        left: 0px;
+        width: 100%;
+    }
+
+    .seeDetails {
+        font-size: 40px;
+        top: calc(89%);
+        left: 0px;
+        width: 100%;
+    }
+
+    .browseMoreGames {
+        height: 113px;
+        width: 529px;
+        margin-top: 51px;
+        font-size: 52px;
+        border-radius: 31px;
+    }
+}
