--- a/assets/css/mainPage.css
+++ b/assets/css/mainPage.css
@@ -1,3 +1,7 @@
+.noMargin{
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
 
 .mainPage{
     background-color: #ecdce1;
@@ -108,3 +112,263 @@
 .learnMore>button:hover {
     background-color: white;
 }
+
+
+@media only screen and (max-width: 1366px) {
+
+    /* html{
+        overflow-x: hidden;
+    } */
+
+    .navbar {
+        position: fixed !important;
+        width: 100% !important;
+    }
+
+    .mainPage {
+        background-color: #ffffff;
+    }
+    header {
+        background-color:  #ffffff;
+    }
+    .iconsHeader {
+        display:none !important;
+    }
+    .mainBG_game {
+        display: none;
+    }
+    .gamesMobille{
+        margin-top: -75px;
+    }
+    .sectionH1{
+        display: flex;
+        width: 100%;
+        margin-top: 100px;
+        
+    }
+    .sectionH1 p {
+        font-size: 125px;
+        line-height: 100px;
+        width: auto;
+        margin: 0 auto;
+    }
+
+    .sectionH1 p:after {
+        height: 16px;
+        width: 201px;
+        border-radius: 15px;
+        top: 44px;
+    }
+
+    .mainPage_JamCity {
+        width: 100%;
+        display: flex;
+        margin-top: 90px;
+    }
+
+    .mainPage_JamCity p {
+        width: auto !important;
+        font-size: 34px;
+        line-height: 41px !important;
+        margin-left: 0px !important;
+        margin: 0 auto !important;
+    }
+
+    .mainPageClick {
+        width: 100%;
+        display: flex;
+        margin-top: 30px;
+    }
+
+    .learnMore {
+        width: 350px;
+        height: 128px;
+        margin-top: 47px;
+        font-size: 43px;
+        margin: 30px 50px;
+        border-radius: 51px;
+    }
+}
+
+/* 
+@media only screen and (min-device-width: 1085px) and (max-device-width: 1366px){
+    .mainPage {
+        background-color: #ffffff;
+    }
+    header {
+        background-color:  #ffffff;
+    }
+    .jamCityAlign{
+        display: none;
+    }
+    .iconsHeader {
+        display:none !important;
+    }
+    .mainBG_game {
+        background: none;
+    }
+    .sectionH1{
+        display: flex;
+        width: 100%;
+        margin-top: 100px;
+        
+    }
+    .sectionH1 p {
+        font-size: 125px;
+        line-height: 100px;
+        width: auto;
+        margin: 0 auto;
+    }
+
+    .sectionH1 p:after {
+        height: 16px;
+        width: 201px;
+        border-radius: 15px;
+        top: 44px;
+    }
+
+    .mainPage_JamCity {
+        width: 100%;
+        display: flex;
+        margin-top: 90px;
+    }
+
+    .mainPage_JamCity p {
+        width: auto;
+        font-size: 34px;
+        line-height: 41px;
+        margin-left: 0px;
+        margin: 0 auto;
+    }
+
+    .mainPageClick {
+        width: 100%;
+        display: flex;
+    }
+
+    .learnMore {
+        width: 310px;
+        height: 78px;
+        margin-top: 47px;
+        font-size: 39px;
+        border-radius: 51px;
+    }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1080px){ 
+    .mainPage {
+        background-color: #ffffff;
+    }
+    header {
+        background-color:  #ffffff;
+    }
+    .jamCityAlign{
+        display: none;
+    }
+    .iconsHeader {
+        display:none !important;
+    }
+    .mainBG_game {
+        background: none;
+    }
+    .sectionH1{
+        display: flex;
+        width: 100%;
+    }
+    .sectionH1 p {
+        font-size: 125px;
+        line-height: 100px;
+        width: auto;
+        margin: 0 auto;
+    }
+    .sectionH1 p:after {
+        height: 16px;
+        width: 201px;
+        border-radius: 15px;
+        top: 44px;
+    }
+    .mainPage_JamCity {
+        width: 100%;
+        display: flex;
+        margin-top: 60px;
+    }
+    .mainPage_JamCity p {
+        width: auto;
+        font-size: 34px;
+        line-height: 41px;
+        margin-left: 0px;
+        margin: 0 auto;
+    }
+
+    .mainPageClick {
+        width: 100%;
+        display: flex;
+    }
+
+    .learnMore {
+        width: 310px;
+        height: 78px;
+        margin-top: 47px;
+        font-size: 39px;
+        border-radius: 51px;
+    }
+}
+
+@media only screen and (min-device-width: 358px) and (max-device-width: 667px){ 
+    .mainPage {
+        background-color: #ffffff;
+    }
+    .jamCityAlign{
+        display: none;
+    }
+    header {
+        background-color:  #ffffff;
+    }
+    .iconsHeader {
+        display:none !important;
+    }
+    .mainBG_game {
+        background: none;
+    }
+    .sectionH1{
+        display: flex;
+        width: 100%;
+        margin-top: 100px;
+    }
+    .sectionH1 p {
+        font-size: 125px;
+        line-height: 100px;
+        width: auto;
+        margin: 0 auto;
+    }
+    .sectionH1 p:after {
+        height: 16px;
+        width: 201px;
+        border-radius: 15px;
+        top: 44px;
+        border-bottom: 24px solid #f57f7f;
+    }
+    .mainPage_JamCity {
+        width: 100%;
+        display: flex;
+        margin-top: 60px;
+    }
+    .mainPage_JamCity p {
+        width: auto;
+        font-size: 34px;
+        line-height: 41px;
+        margin-left: 0px;
+        margin: 0 auto;
+    }
+    .mainPageClick {
+        width: 100%;
+        display: flex;
+    }
+    .learnMore {
+        width: 310px;
+        height: 78px;
+        margin-top: 47px;
+        font-size: 39px;
+        border-radius: 51px;
+    }
+} */
